--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cloudinary-build-url": "^0.2.4",
     "dotenv": "^16.0.0",
     "framer-motion": "^6.2.6",
-    "next": "^12.0.11-canary.15",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.45.0"
@@ -27,7 +27,5 @@
     "eslint-config-next": "12.0.7",
     "next-offline": "^5.0.5"
   },
-  "cacheDirectories": [
-    ".next/cache"
-  ]
+  "cacheDirectories": [".next/cache"]
 }
