--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0", "next-offline": "^5.0.5"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
     "next-offline": "^5.0.5"
-  },
-  "cacheDirectories": [".next/cache"]
+  }
 }
